--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
+    "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "http-status": "^1.7.0",
     "husky": "^8.0.3",
@@ -46,8 +48,10 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
+    "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.9",
     "@types/mongoose-paginate-v2": "^1.6.5",
     "@types/nodemailer": "^6.4.10",
     "@types/passport": "^1.0.12",
