--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
@@ -51,6 +52,7 @@
     "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.4",
     "@types/express-session": "^1.17.9",
     "@types/mongoose-paginate-v2": "^1.6.5",
     "@types/nodemailer": "^6.4.10",
