--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Dependencies
-node_modules
+/dist
+/node_modules
+/build
 
 # yarn error logs
 yarn-error.log
@@ -13,3 +15,4 @@ coverage
 
 #public
 public
+
